# base-lib

./: .gitignore  .travis.yml  Makefile  README.md  package.json
configs/: com-model-def.mk  com-ruler-def.mk  com-target-def.mk  com-var-def.mk
docs/: memory.md  socket.md
docs/bookmark/: bookmark.md
docs/pointer/: Makefile  one-two-pointer.c  one-two-pointer.h
inc/: cjson_helper.h  cvs_helper.h  dir_helper.h  excel_helper.h  file_helper.h  hex_helper.h  log_helper.h  mem_helper.h  misc_helper.h  net_v1.h  socket.h  str_buf_helper.h  time_helper.h
include/: array.h  array_reader.h  array_writer.h  cjson_utils.h  csv_helper.h  data_type.h  datatype_helper.h  dir_helper.h  excel_helper.h  file_helper.h  heap_memory_helper.h  hex_helper.h  ipc.h  ipc_private.h  link.h  link_manager.h  list.h  little_things.h  log_helper.h  mem_helper.h  misc.h  misc_helper.h  network-card.h  network_protocol.h  network_protocol_client.h  network_protocol_server.h  parse_cmd.h  pthread_helper.h  ringbuf.h  serial_helper.h  signal_helper.h  socket.h  socket_helper.h  str_helper.h  thread.h  thread_helper.h  time_bl.h  time_helper.h  type.h  type_helper.h  (+4 more)
project/autotools/: Makefile.am  autogen.sh  configure.ac  hello.c
project/autotools/inc/: demo.h
project/autotools/src/: Makefile.am  demo.c
project/autotools/test/: Makefile.am  hello.c
project/time_stamp-to-wav/: Makefile  handle-time_stamp-to-wav.sh
project/vad/: Makefile  (+1 more)
src/: array.c  array_reader.c  array_writer.c  csv_helper.c  cvs_helper.c  datatype_helper.c  dir_helper.c  excel_helper.c  file_helper.c  heap_memory_helper.c  hex_helper.c  link.c  link_manager.c  log_helper.c  mem_helper.c  misc.c  misc_helper.c  net_v1.c  network_protocol.c  network_protocol.c-bak  network_protocol_client.c  network_protocol_server.c  parse_cmd.c  pthread_helper.c  ringbuf.c  serial_helper.c  signal_helper.c  socket_helper.c  str_buf_helper.c  str_helper.c  thread.c  thread_helper.c  time_bl.c  time_helper.c  typedef_helper.c  uart_helper.c  wav_helper.c
src/autotool/test/app-skeleton3/: Makefile  Makefile.am  configure.ac
src/autotool/test/app-skeleton3/pixmaps/: Makefile  Makefile.am
src/autotool/test/app-skeleton3/src/: Makefile  Makefile.am  app-skeleton  hello-world.c
test/: Makefile  array_test.c  csv_test.c  cvs_test.c  file_test.c  heap_memory_test.c  main.c  mem_test.c  mkptych.py  net_v1_test.c  parse_cmd.c  parse_cmd.h  ringbuf-test.c  serial_receive.c  serial_send.c  socket_client.c  socket_helper.c  socket_helper.h  socket_server.c  socket_test.c  str_buf_test.c  str_test.c  test.csv  test_wav.c  time_test.c  uart_receive.c  uart_send.c  wav_test.c
(+203 files in other folders)
