# ===============================================================
# 
# Release under GPLv2.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    25/07 2018 14:23
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        25/07 2018      create the file
# 
#     last modified: 25/07 2018 14:23
# ===============================================================

AUTOMAKE_OPTIONS=foreign

noinst_LIBRARIES=libdemo.a
libdemo_a_SOURCES=demo.c
#INCLUDES=-I$(top_srcdir)/inc
AM_CFLAGS = -I$(top_srcdir)/inc

distclean-local:
	-rm Makefile.in

#swapincludedir=$(includedir)/swap
#swapinclude_HEADERS=$(top_srcdir)/src/include/swap.h

